[package]
name = "neco-blockchain-helper-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["full"] }
# parse json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.5.16"
log = "0.4.17"
ethers = { git = "https://github.com/gakonst/ethers-rs" }
ethers-core = "0.17.0"
tokio-test = "0.4.2"
utoipa = { version = "2", features = ["axum_extras"] }
dotenv = "0.15.0"